--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: 'Raleway';
+  src: local('Raleway'), url('./fonts/Raleway/static/Raleway-Regular.ttf') format('truetype');
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +9,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #FAF9F6;
 }
 
 code {
